# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import chatRouter from "./chat";
+import userRouter from "./user";
+import conversationsRouter from "./conversations";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(chatRouter);
+router.use(userRouter);
+router.use(conversationsRouter);
 
 export default router;
